<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    tools:showIn="@layout/bill_add"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/text_add_bill"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_margin="@dimen/app_margin_2x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_padding_2x"
            android:orientation="vertical">

            <app.boletinhos.widget.currency.CurrencyInput
                android:id="@+id/inputBillValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bill_value"/>

            <app.boletinhos.widget.text.TextInput
                android:id="@+id/inputBillName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_1x"
                android:hint="@string/hint_bill_name"/>

            <app.boletinhos.widget.text.TextInput
                android:id="@+id/inputBillDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_1x"
                android:hint="@string/hint_bill_description"/>

            <app.boletinhos.widget.date.DateInput
                android:id="@+id/inputBillDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/app_margin_1x"
                android:hint="@string/hint_bill_due_date"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- TODO @contentDesc -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_create_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin_2x"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_check"
        />

</merge>