<?xml version="1.0" encoding="utf-8"?>
<app.boletinhos.welcome.WelcomeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin_2x"
        android:text="@string/text_welcome_title"
        android:textAppearance="?textAppearanceHeadline5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin_2x"
        android:text="@string/text_welcome_message"
        android:textAppearance="?textAppearanceBody1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_add_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin_2x"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_add"/>
</app.boletinhos.welcome.WelcomeView>